--- a/npcs/Race Abilities.yaml
+++ b/npcs/Race Abilities.yaml
@@ -52,7 +52,10 @@
         - Speallcasting: Can cast Crusader's Mantle, Guiding Bolt, Sacred Flame and Sunburst at Level 5 with a DC16
 
    - - Dwarf Abilities:
-       - Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage           
+       - Darkvision: Accustomed to life underground, you have superior vision in dark and dim conditions. You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You
+                     can't discern color in darkness, only shades of gray
+       - Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage
+       - Tool Proficiency: You gain proficiency with the artisan's tools of your choice: smith's tools, brewer's supplies, or mason's tools.       
        - Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
        - Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
                       instead of his normal Proficiency Bonus
@@ -485,3 +488,24 @@
        - Cats Claws: Because of your claws, you have a climbing speed of 20 feet. In addition, your claws are natural weapons, which you can use to make unarmed strikes. If you hit with them, you deal slashing damage equal to 
                      1d4 + your Strength modifier, instead of the bludgeoning damage normal for an unarmed strike.
        - Cats Talent: You have proficiency in the Perception and Stealth skills
+       
+       
+   - - Minotaur Abilities:
+       - Horns: Your horns are natural melee weapons, which you can use to make unarmed strikes. If you hit with them, you deal piercing damage equal to ld6 + your Strength modifier, instead of the bludgeoning damage normal for
+                an unarmed strike.
+       - Goring Rush: Immediately after you use the Dash action on your turn and move at least 20 feet, you can make one melee attack with your horns as a bonus action.
+       - Hammering Horns: Immediately after you hit a creature with a melee attack as a part of the Attack action on your turn, you can use a bonus action to attempt to shove that target with your horns. The target must be
+                          within 5 feet of you and no more than one size larger than you. Unless it succeeds on a Strength saving throw against a DC equal to 8 + your proficiency bonus + your Strength modifier, you push it up to
+                          10 feet away from you.
+       - Imposing Presence: You have proficiency in one of the following skills of your choice: Intimidation or Persuasion
+       - Menacing: You gain proficiency in the Intimidation skill.
+       - Relentless Endurance: When you are reduced to 0 hit points but not killed outright, you can drop to 1 hit point instead. You can’t use this feature again until you finish a long rest.
+       - Savage Attacks: When you score a critical hit with a melee weapon attack, you can roll one of the weapon’s damage dice one additional time and add it to the extra damage of the critical hit
+       
+       
+   - - Water Genasi Abilities:
+        - Acid Resistance: You have resistance to acid damage.
+        - Amphibious: You can breathe air and water.
+        - Swim: You have a swimming speed of 30 feet.
+        - Call to the Wave: You know the Shape Water cantrip. When you reach 3rd level, you can cast the Create or Destroy Water spell as a 2nd-level spell once with this trait, and you regain the ability to cast it this way 
+                            when you finish a long rest. Constitution is your spellcasting ability for these spells.
