--- a/npcs/vrakoom.yaml
+++ b/npcs/vrakoom.yaml
@@ -83,7 +83,7 @@ metadata:
   # For now, I suggest: convert the character name to lower case,
   # and replace all spaces and punctuation with underscores (_)
   #
-  id: uthriel_seawalker
+  id: vrakoom
 
   #
   # The name of the submitter (your name).
@@ -103,7 +103,7 @@ metadata:
   # E.g. "2021-12-31"
   #      "2021-12-31 23:59:59"
   #
-  date: "2021-08-09"
+  date: "2021-08-11"
 
   #
   # Arbitrary labels that are opaque to the system, only
@@ -134,7 +134,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Uthriel Seawalker
+  name: Vrakoom
 
   #
   # The NPC artwork.
@@ -187,7 +187,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: Genasi
+    race: Loxodon
 
     #
     # The sub-race can be anything.
@@ -196,7 +196,7 @@ npc:
     # Optional.  Can be commented out.
     # Max length: ...
     #
-    sub-race: Water
+    sub-race: N/A
 
     #
     # Pronouns (case insensitive):
@@ -206,7 +206,7 @@ npc:
     #
     # Required.
     #
-    pronouns: she/her
+    pronouns: he/him
 
     #
     # Occupation(s).
@@ -214,7 +214,7 @@ npc:
     # Required.
     # Max length per occupation: ...
     occupation:
-    - Sailor
+    - Priest
     
 
     #
@@ -238,7 +238,7 @@ npc:
     #
     # Required.
     #
-    class: Sorcerer
+    class: Cleric
 
     #
     # D & D subclasses (case insensitive):
@@ -261,7 +261,7 @@ npc:
     #
     # Required.
     #
-    subclass: Storm Sorcery
+    subclass: Life Domain
 
     #
     # Class level.
@@ -270,7 +270,7 @@ npc:
     # Required.
     # Integer.
     #
-    level: 7
+    level: 8
 
     #
     # Alignments (case insensitive):
@@ -286,7 +286,7 @@ npc:
     #
     # Required.
     #
-    alignment: Chaotic Neutral
+    alignment: Lawful Good
 
     #
     # Alignment tendencies:
@@ -310,9 +310,8 @@ npc:
     #
     languages:
     - Common
-    - Priomrdial
+    - Loxodon
     - Elvish
-    - Triton
 
 
     #
@@ -333,8 +332,8 @@ npc:
     # Optional.  0 or more.
     #
     factions:
-    - id: the_djinn_rummy_s_crew
-      name: The Djinn Rummy's Crew
+    - id: selesnya_conclave
+      name: Selesnya Conclave
 
 
     #
@@ -343,9 +342,9 @@ npc:
     # Optional.  0 or more.
     #
     adjectives:
-    - Confident   
-    - Carefree
-    - Arrogant
+    - Pious   
+    - Generous
+    - Caring
 
   improv:
 
@@ -360,7 +359,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  A strange looking blue humanoid floats down from the crow's nest as the party boards the ship
+    introduction:  The massive priest slowly approaches across the temple floor "Blessings be upon you my children, how mat I help?"
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -371,7 +370,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    appearance:   Muscular and Heavy-set, black hair, light blue skin, pointed ears and loose flowing robes. A swallow tattoo on her arm
+    appearance:   8' tall, 380lbs of elephantine righteousness. Gray-brown leathery skin with a large trunk and floppy ears
 
     #
     # Expressions: things the character says all the time, making their speech distinctive.
@@ -387,7 +386,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "I own this sea"; "The weather owns us"
+    expressions:  "Trostani's light be upon you", "May peace guide your way"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -400,7 +399,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    mannerisms:    A slightly pigeon-toed walk and often speaks faster than is easily follow-able
+    mannerisms:    regularly flaps his large ears
 
   acting:
     #
@@ -410,7 +409,7 @@ npc:
     # ???Maximum length???
     #
     motivations: |
-      A fierce confidence pushes her to improve herself every day and allows her to believe she can accomplish anything
+      Helping his community, Spreading the word of peace and light
       
     #
     # Passions:
@@ -419,7 +418,7 @@ npc:
     # ???Maximum length???
     #
     passions: |
-      The Sea, The salt air, Her studies
+      Religious knowledge
       
     #
     # Vulnerabilities:
@@ -428,7 +427,7 @@ npc:
     # ???Maximum length???
     #
     vulnerabilities: |
-      She's overly confident often to the point of arrogance
+      Overthinks and can be slow to act
       
     #
     # Secrets:
@@ -437,7 +436,7 @@ npc:
     # ???Maximum length???
     #
     secrets: | 
-      She knows where there is a whole in the world to the Elemental Plane of Water
+      He some of the secrets of The Conclave
        
       
   #
@@ -445,15 +444,15 @@ npc:
   # All integers.
   #
   stats:
-    armour-class: 14
-    hit-points: 40
-    speed: 30 walking, 30 swimming
-    str: 13
-    dex: 16
-    con: 16
-    int: 15
-    wis: 13
-    cha: 19
+    armour-class: 18
+    hit-points: 91
+    speed: 30
+    str: 18
+    dex: 12
+    con: 18
+    int: 13
+    wis: 19
+    cha: 11
 
   #
   # Special characteristics.
@@ -465,52 +464,51 @@ npc:
   specialties:
     skills: 
 
-   - - Water Genasi Abilities:
-        - Acid Resistance: You have resistance to acid damage.
-        - Amphibious: You can breathe air and water.
-        - Swim: You have a swimming speed of 30 feet.
-        - Call to the Wave: You know the Shape Water cantrip. When you reach 3rd level, you can cast the Create or Destroy Water spell as a 2nd-level spell once with this trait, and you regain the ability to cast it this way 
-                            when you finish a long rest. Constitution is your spellcasting ability for these spells.
+   - - Loxodon Abilities:
+        - Loxodon Serenity: You have advantage on saving throws against being charmed or frightened.
+        - Natural Armor: You have thick, leathery skin. When you aren't wearing armor, your AC is 12 +your Constitution modifier. You can use your natural armor to determine your AC if the armor you wear would leave you with a 
+                         lower AC. A shield's benefits apply as normal while you use your natural armor.
+        - Trunk: You can grasp things with your trunk, and you can use it as a snorkel. lt has a reach of 5 feet, and it can lift a number of pounds equal to five times your Strength score. You can use it to do the following 
+                 simple tasks - lift, drop, hold, push, or pull an object or a creature; open or close a door or a container; grapple someone; or make an unarmed strike. Your DM might allow other simple tasks to be added to 
+                 that list of options. Your trunk can't wield weapons or shields or do anything that requires manual precision, such as using tools or magic items or performing the somatic components of a spell.
+        - Keen Smell: Thanks to your sensitive trunk, you have advantage on Wisdom (Perception), Wisdom (Survival), and Intelligence (Investigation) checks that involve smell
 
-   - - Sorcerer Ability
-       - Sorcerer Spellcasting: 7 Sorcery Points, Spell DC 16
-          Cantrips: Thunderclap, Shape Water, Booming Blade, Ray of Frost, Lightning Lure
-          1st Level: Fog Cloud, Shield, Thunderwave, Magic Missle
-          2nd Level: Misty Step, Mind Thrust, Invisibility
-          3rd Level: Counterspell, Lightning Bolt, Wall of Water
-       - MetaMagic: You gain two of the following Metamagic Options of your choice. You gain another one at 10th and 17th level.
-          1: Empowered Spell
-          2: Heightened Spell 
+   - - Cleric Abilities:
+       - Spellcasting: Spell DC 15
+         Cantrips: Decompose, Guidance, Light, Spare the Dying, 
+         1st Level: Create/Destroy Water, Detect Evil and Good, Detect Magic, Purify Food and Drink 
+         2nd Level: Calm Emotion, Gentle Repose, Prayer of Healing
+         3rd Level: Mass Healing Word, Dispel Magic, Spirit Guardians
+         4th Level: Arua of Life, Banishment
+       - Channel Divinity: Turn Undead, Destroy Undead
        
-   - - Storm Sorcery Abilities:
-       - Wind Speaker: The arcane magic you command is infused with elemental air. You can speak, read, and write Primordial. Knowing this language allows you to understand and be understood by those who speak its dialects: 
-                       Aquan, Auran, Ignan, and Terran.
-       - Tempestuous Magic: you can use a bonus action on your turn to cause whirling gusts of elemental air to briefly surround you, immediately before or after you cast a spell of 1st level or higher. Doing so allows you to 
-                            fly up to 10 feet without provoking opportunity attacks
-       - Heart of the Storm: you gain resistance to lightning and thunder damage. In addition, whenever you start casting a spell of 1st level or higher that deals lightning or thunder damage, stormy magic erupts from you. This 
-                             eruption causes creatures of your choice that you can see within 10 feet of you to take lightning or thunder damage (choose each time this ability activates) equal to half your sorcerer level.
-       - Storm Guide: you gain the ability to subtly control the weather around you. If it is raining, you can use an action to cause the rain to stop falling in a 20-foot-radius sphere centered on you. You can end this effect 
-                      as a bonus action. If it is windy, you can use a bonus action each round to choose the direction that the wind blows in a 100-foot-radius sphere centered on you. The wind blows in that direction until the 
-                      end of your next turn. This feature doesn't alter the speed of the wind.
+   - - Cleric Abilities:
+       - Spellcasting: Spell DC 15 
+         1st Level: Bless, Cure Wounds
+         3rd Level: Lesser Restoration, Spiritual Weapon
+         5th Level: Beacon of Hope, Revivify
+         7th Level: Death Ward, Guardian of Faith
+       - Disciple of Life: your Healing Spells are more effective. Whenever you use a spell of 1st level or higher to Restore Hit Points to a creature, the creature regains additional Hit Points equal to 2 + the spell’s level
+       - Channel Divinity: Preserve Life - you can use your Channel Divinity to heal the badly injured. As an action, you present your holy Symbol and evoke Healing energy that can restore a number of Hit Points equal to five 
+                                           times your Cleric level. Choose any creatures within 30 feet of you, and divide those Hit Points among them. This feature can restore a creature to no more than half of its hit point 
+                                           maximum. You can’t use this feature on an Undead or a Construct.
+       - Blessed Healer: the Healing Spells you cast on others heal you as well. When you Cast a Spell of 1st level or higher that restores Hit Points to a creature other than you, you regain Hit Points equal to 2 + the spell’s
+                         level.
+       - Divine Strike: you gain the ability to infuse your weapon strikes with divine energy. Once on each of your turns when you hit a creature with a weapon Attack, you can cause the Attack to deal an extra 1d8 radiant damage
+                        to the target. When you reach 14th level, the extra damage increases to 2d8.
        
     special-abilities:
-       - Proficiencies: Medicine, Insight, History, Gravekeeping and Embalming Tools
-       - Feats: N/A
+       - Proficiencies: Perception, Insight, Medicine, Arcana, Heavy Armor
+       - Feats: Great Weapons Master, Healer, Durable, Sentinal, Shield Master
        
     attacks: |
-      1 attack with cutlass or spell attack
+      1 attack with Siege Breaker Great Maul or spell attack
     combat-tactics: |
-      is always happy to have a go
-    special-equipment:
-    - Cutlass
-    - The Djinn Rummy (Schooner)
-    - Tempest Sails: Wondrous item, very rare (requires attunement)During the day, these sails change color to resemble the current color of the sky. These sails, the mast, and their rigging can’t be damaged by wind of any 
-                     strength. As an action while you are aboard the ship, you can treat the wind in the sails as if it is one degree stronger than it is. Additionally, as an action while you are aboard the ship, you can treat 
-                     the wind in the sails as if it were blowing in the direction of your choice. (That is, you can change either the speed or the direction.)
-    - Ghost-Lantern Bowsprit: Wondrous item, very rare (requires attunement) An antique iron or brass lantern hangs at the end of this bowsprit. When you light the lantern at night, undead creatures that come within 200 feet of 
-                              the bowsprit seem to burn with spectral fire and give off bright light in a 10-foot radius. When your ship would take bludgeoning, piercing, or slashing damage from a nonmagical weapon, you can use 
-                              your reaction to grant the ship resistance to bludgeoning, piercing, and slashing damage from nonmagical weapons until the beginning of your next turn. The ship and all of its crew momentarily seem 
-                              ghostly and translucent. Using this power extinguishes the ghost-lantern and prevents it from being relit until the next dusk.
+      He will fight with his maul, shield and trunk, but he is much more focused on supporting and healing those around him
+    special-equipment:      
+    - Sentinel Shield: While holding this shield, you have advantage on initiative rolls and Wisdom (Perception) checks. The shield is emblazoned with a symbol of an eye.
+    - Siege Breaker Maul: +1 bonus to attack and damage rolls made with this magic weapon. In addition, when you hit an object with a siege breaker, you deal an additional 2d4 bludgeoning damage. You also have advantage on 
+                          Strength checks made to break open doors while wielding this weapon    
     
     
   profile:
@@ -523,12 +521,9 @@ npc:
     # No length limit for now.
     #
     background-story: |
-     The child of an errant Water Djinn and a Sea Elf, Uthriel has sea water in her veins. She grew up in and around the ocean and is more comfortable at sea than on land. In her teens she left her seaside home to attend a 
-     Sorcerer's University in the capital. Being that far from the water didn't sit well with her for long, so after just 2 years she returned and began working on ships until she had made enough money to buy her own. The Djinn 
-     Rummy is her ship and she runs cargo for customers but her favorite jobs are delivering adventurers to exotic locales.
-
-
-
+     Vrakoom's family has a long tradition of serving as clerics of the Selesnya Conclave and started his training at a young age. Growing up in the light of Trostani, he is a true believer and has strong faith in the teachings
+     of the conclave. These teachings are where he derive's his power. Large, even for a loxodon, he was groomed as a front line healer and has seen his fair share of battles for his young age (about 70 years old), mostly
+     against Gruul raids, but also during the War of the Spark. As a result, he is as competent with his maul and shield as he is with a healing hand
       
     #
     # Personality (or something like that):
@@ -539,8 +534,9 @@ npc:
     # No length limit for now.
     #
     personality: |
-     Uthriel has worked hard for all that she has, and is confident, often to the point of arrogance. This is becuse she knows how hard she worked and how good she is. She also has an adverturous streak and loves to take on the 
-     more odd and difficult jobs. She is a assertive captain who accepts no insubordination from either her crew or her passengers. She knows the sea and loves it with all her heart
+     Vrakoom is a wise and pious young man. He has spent his life devoted to the conclave and their tenets. He prefers the peace of the conclave and studying history, medicine and arcana, but because of his skill and imposing
+     size, he's spent a fair amount of time in combat situations. He prefers to funstion as more of a combat medic in those situations but he can certainly do a lot of damage with his maul if he needs to. He is very laid back
+     and generous, but he's not the biggest people person, prefering his books to conversation.
      
   #
   # Content that does not get displayed, but could be useful
