--- a/npcs/Class Abilities.yaml
+++ b/npcs/Class Abilities.yaml
@@ -101,7 +101,7 @@
        - Superior Inspiration: when you roll Initiative and have no uses of Bardic Inspiration left, you regain one use.	   
 	   
  
-   - - Sorcerer Ability
+   - - Sorcerer Ability:
        - Sorcerer Spellcasting:  Sorcery Points  Spell DC
           Cantrips: 
           1st Level: 
