--- a/npcs/feats.yaml
+++ b/npcs/feats.yaml
@@ -31,6 +31,9 @@
    - Heavy Armor Master: Prerequisite - Proficiency with heavy armor. +1 in Str. and bludgeoning, piercing, and slashing damage are reduced by 3 if you are wearing an heavy armor.
    - Infernal Constitution:	Prerequisite - Tiefling. +1 in Con., resistance to cold and poison damage, and you have advantage on saving throws against being poisoned.
    - Inspiring Leader: Prerequisite - Charisma 13 or higher. Up to 6 creatures within 30 ft of you can gain temporary hp equal to your level + your Cha. modifier.
+   - Juggler: You master the art of throwing weapons. You gain the following benefits - You get a +1 to Dexterity or Strength. You can take out a weapon and throw it as part of the same attack. Additionally you can throw a 
+              light weapon as a bonus action. You are proficient with any weapon you throw, including improvised. You are considered proficient with any ability check that involves juggling (e.g. performance, acrobatics, 
+              dexterity etc.)
    - Keen Mind:	+1 in Int., you know which way is north, when is the next sunrise/sunset, and recall any events within the past month.
    - Lightly Armored: +1 in Str. or Dex. and you gain profociency with light armor.
    - Linguist: +1 in Int., you learn three languages, and you can ably create ciphers.
