--- a/npcs/feats.yaml
+++ b/npcs/feats.yaml
@@ -2,6 +2,11 @@
    - Alert:	+5 to initiative, you can't be surprised, and creatures you don't see don't gain advantage on attack roll against you.
    - Artificer Initiate: You learn one cantrip and one 1st-level artificier spell (cast without slot), proficiency with one type of artisan's tools.
    - Athlete: +1 in Str. or Dex., you stand up and climb more quickly, and you can jump with only a 5-ft run.
+   - Barbed Hide: Prerequisite - Tiefling One of your ancestors was a barbed devil or other spiky fiend. Barbs protrude from your head. You gain the following benefits - 
+                  - Increase your Constitution or Charisma score by 1, up to a maximum of 20.
+                  - You gain proficiency in the Intimidation skill. If you’re already proficient in it, your proficiency bonus is doubled for any check you make with it.
+                  - As a bonus action, you can cause small barbs to protrude all over your body or cause them to retract. At the start of each of your turns while the barbs are out, you deal 1d6 piercing damage to any creature
+                    grappling you or any creature grappled by you.
    - Bountiful Luck: Prerequisite - Halfling. You can let an ally within 30 ft of you to reroll a 1 on a d20.
    - Charger: As part of the Dash action you can make a melee attack with a +5 bonus if you move at least 10 ft before.
    - Chef: +1 in Con. or Wis., proficiency with cook's utensils and cook special food to regain hp.
