--- a/npcs/aeureek_potomach.yaml
+++ b/npcs/aeureek_potomach.yaml
@@ -477,12 +477,11 @@ npc:
 
    - - School of Lore Mastery Abilities:
        - Lore Master: Proficiency bonus is doubled for skill checks involving Arcana, History, Investigation and Religion. Can add Intelligence bonus to initiative rolls instead of Dexterity           
-       - Spell Secrets: Can change the damage type of a spell she casts to Force, Necrotic, Radiant or Lightning dammage instead of its original damage type. In addition, once per long rest,
-                        if a spell requires her target to make a saving throw, she can change the ability score type of that saving throw
-       - Alchemical Casting: Can spend an additional spell slot of level 1-3 when casting a spell to enhance that spell
-           1st Level: Increase the spells damage by 2d10 Force damage
-           2nd Level: If the spell's range is at least 30 feet, that range is tripled
-           3rd Level: Increase the spell's DC by 2 for all targets           
+       - Spell Secrets: your knowledge of the inner workings of magic is extensive enough to allow you to reshape and alter the nature of a spell to your whim. You have a pool of lore points equal to your intelligence modifier +1
+                       (Minimum of 1). You regain all lore points after a long rest. When you cast a spell that deals acid, cold, fire, lightning, necrotic, or thunder damage, you can expend a lore point as a bonus action and change 
+                       the damage type of that spell to any other from that list (You can change only one damage type per casting of a spell)
+       - Arcane Analyser: your mind is so quick at deciphering the inner workings of a spell, you can instantly know a spells effect as soon as you see it. If you see a spell being cast within 60ft of you, and it is part of the 
+                          wizard spell list, you can then copy down and transfer the spell to your spellbook during your next long rest.           
 
     special-abilities:
     - Proficiencies: Arcana, History, Investigation, Religion, Persuasion, Insight, Deception    
