--- a/npcs/anastasia_dumas.yaml
+++ b/npcs/anastasia_dumas.yaml
@@ -465,7 +465,7 @@ npc:
   specialties:
     skills:
    - - Sorcerer Ability
-       - Sorcerer Spellcasting:  Sorcery Points
+       - Sorcerer Spellcasting:  Sorcery Points 20, Spell DC 20
           Cantrips: Fire Bolt, Mage Hand, Shocking Grasp, Minor Illusion, Message, Chill Touch
           1st Level: Charm Person, Magic Missle, Shield, Mage Armor
           2nd Level: Detect Thoughts, Hold Person, Scorching Ray, Shatter, Darkness
